Changed tags from flex to grid to fix layout issue

--- a/client/src/scss/util/Card/Card.module.scss
+++ b/client/src/scss/util/Card/Card.module.scss
@@ -5,10 +5,10 @@
   color: var(--primary-color);
   width: 450px;
   max-width: 500px;
-  height: 500px;
-  max-height: 450px;
+  height: auto;
   box-shadow: var(--btn-box-shadow);
   border-radius: 5px;
+  padding: 40px 0;
 }
 
 .cardContainer {
@@ -17,9 +17,11 @@
 
 .header {
   text-align: center;
+  position: relative;
+  bottom: 50px;
   & .heading {
-    padding: 20px;
-    font-size: 1.5rem;
+    padding: 10px;
+    font-size: 1.4rem;
     color: var(--primary-color);
   }
 
@@ -36,6 +38,9 @@
   justify-content: space-between;
   width: 100%;
   margin: 0 auto;
+
+  position: relative;
+  bottom: 45px;
 
   li {
     padding: 10px 5px;
@@ -54,10 +59,18 @@
 }
 
 .tag {
+  position: relative;
+
+  bottom: 50px;
+
   & .tagContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    row-gap: 5px;
+    justify-content: space-evenly;
+    width: 100%;
+    max-width: 100%;
   }
   &::before {
     content: "";
